
add_subdirectory(example.cpp.backends.callback)
add_subdirectory(example.cpp.backends.file)
add_subdirectory(example.cpp.backends.file.callback)
add_subdirectory(example.cpp.backends.file.lrsplit)
add_subdirectory(example.cpp.backends.mx.1)
add_subdirectory(example.cpp.backends.mx.2)


# ############################## end of file ############################# #

