
add_subdirectory(example.cpp.misc.101)
#[====[
add_subdirectory(example.cpp.misc.custom_type_1)
#]====]
add_subdirectory(example.cpp.misc.extended_severity_information)
add_subdirectory(example.cpp.misc.hetero1)
add_subdirectory(example.cpp.misc.no_namespace)
add_subdirectory(example.cpp.misc.strings)


# ############################## end of file ############################# #

